# libzmodem

./: CHANGES  COMPATABILITY  INSTALL  Makefile  Makefile.in  NEWS  README-alpha  README.systems  acconfig.h  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.in  debian.README  debian.control  debian.copyright  debian.preinst  debian.rules  lrz.1  lrz.c  lsz.1  lsz.c  rbsb.c  testlrzsz  timing.c  timing.h  zm.c  zmodem.h
CVS/: Entries
debian/: changelog  control  copyright  rules  watch
debian/CVS/: Repository
debian/patches/: 313992_de_po.diff
intl/CVS/: Entries  Repository  Root
lib/: Makefile.in  long-options.c
lib/CVS/: Entries  Repository
man/: Makefile.in  lsz.1
man/CVS/: Entries  Repository
po/: cat-id-tbl.c  de.po  lrzsz.pot
po/CVS/: Entries  Repository
src/: Makefile.in  ansi2knr.c  lrz.c  lsz.c  rbsb.c  tcp.c  zm.c  zreadline.c
src/CVS/: Entries  Repository
testsuite/: Makefile.in
testsuite/CVS/: Entries  Repository
testsuite/config/CVS/: Entries  Repository
testsuite/lib/CVS/: Entries  Repository
testsuite/lrzsz/CVS/: Entries  Repository
